--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             <img src="logo.png" alt="Logo" style="height: 40px;">
             <span>Mithril-Healthcare</span>
         </div>
+        <button class="hamburger" aria-label="Toggle Menu">
+            <i class="fas fa-bars"></i>
+        </button>
         <ul class="nav-links">
             <li><a href="index2.html">Home</a></li>
             <li><a href="about.html">About</a></li>
